# Robotics-Platforms

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  Server_Host.py  app.py  asgi.py  e -i 3335b0b  gitignore  pyproject.toml  requirements.txt  test_module_import.html
.github/: copilot-instructions.md
.github/workflows/: playwright-e2e.yml
3d_objects/: 3d_object_list_for_download.py  objects_registry.json
ai_integration/: action_schema.json  ai_integegrations.py
backend/: requirements.txt
backend/src/: server.py
backend/tests/: conftest.py  smoke_test_server.py  test_ai_endpoint.py  test_ai_object_endpoint.py  test_assets_registry.py  test_cesium_token.py  test_debug_cesium_check_flask.py  (+2 more)
docs/: IMPLEMENTATION_SUMMARY.md  SESSION_MANAGEMENT.md  SESSION_QUICKSTART.md  architecture.md  simulation_flow.md
documentation/: readme.md
frontend/: package-lock.json  package.json  playwright.config.js  tsconfig.json
physics/: aircraft.js  buoyancy.js  character.js  constraints.js  controllers.js  environment.js  index.js  physics.js  rigid_body.js  vehicle.js
robotics_platforms.egg-info/: PKG-INFO  SOURCES.txt
routes/: objects.py
scripts/: check_endpoints.py  check_import_from_frontend.py  download_models.py  run_uvicorn.bat  run_uvicorn.ps1  serve_templates.bat  serve_templates.ps1  serve_templates.py  start_all.bat  start_all.ps1
sensors_pheripherals_radios/: sensor_parameter_configurations.js
static/: any_other_media_sounds_images_videos  css
templates/: base.html  digital_twin.html  digital_twin.modular.html
(+125 files in other folders)
