[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-platforms"
version = "0.0.1"
description = "Digital Twin robotics platform"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["backend", "backend.src"]
